fixed editing project name with too long string

--- a/src/pages/ProjectPage/ProjectTitle/ProjectTitle.scss
+++ b/src/pages/ProjectPage/ProjectTitle/ProjectTitle.scss
@@ -17,6 +17,14 @@
 
   span[contenteditable="true"] {
     background-color: $color-gray;
+    max-width: calc(100% - 160px);   
+  }
+  
+  span[contenteditable="false"]{
+    text-overflow: ellipsis;
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   span:empty {
@@ -53,6 +61,7 @@
   border-radius: 50%;
   opacity: 0;
   transition: $transition;
+  flex-shrink: 0;  
 
   &:hover {
     background-color: $color-lightgray;
